- fix some spacings in footer and buttons

--- a/Task 2 - CSS layout/src/css/style.scss
+++ b/Task 2 - CSS layout/src/css/style.scss
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
       flex-flow: column;
       align-items: center;
       flex: 0 0 33%;
-      margin: 2vh 0.5vh;
+      margin: 4%;
       cursor: pointer;
 
       &__icon {
@@ -120,10 +120,12 @@ h1, h2, h3, h4, h5, h6 {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 200%;
+        font-size: 250%;
         position: relative;
         width: $ring-size;
         height: $ring-size;
+        min-width: 80px;
+        min-height: 80px;
 
         &::after {
           content: '';
@@ -151,8 +153,14 @@ h1, h2, h3, h4, h5, h6 {
 
   &__volume {
     display: flex;
+    font-size: 115%;
+
+    i {
+      font-size: inherit;
+    }
+
     &__icon {
-      margin-right: 20px;
+      margin-right: 12px;
     }
   }
 
@@ -160,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     position: fixed;
     right: 3%;
-    bottom: 2%;
+    bottom: 4.5%;
 
     &__item {
       & + & {
